--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/icon9.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/icon9.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/icon9.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icons/icon9.png">
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,7 +52,7 @@
 
                     <a href="#hero" class="site-logo"><img
                             style="margin:0; padding: 0%; width:52px;height: 42px; border-radius: 20px;"
-                            src="assets/img/icons/icon9.png" alt="logo"></a>
+                            src="./assets/img/icons/icon9.png" alt="logo"></a>
 
                 </div>
 
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/dev1.png" alt="main image">
+                    <img src="./assets/img/dev1.png" alt="main image">
                 </div>
 
             </div>
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>I'm a former law student, but several years ago I straighten my path towards Computer Science
                             which is my passion.</p>
                         <a href="#" class="btn btn-fill" target="_blank" download>Download my Resume</a>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="text-center">
                     <h3>My Main Skills</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
 
@@ -183,11 +183,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>What i do</h3>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
-                            <img style="width: 60px;" src="assets/img/booking.png" alt="Front End Developer">
+                            <img style="width: 60px;" src="./assets/img/booking.png" alt="Front End Developer">
                             <h4>Android mobile development</h4>
                             <p>As a Kotlin developer, I have experience the main Androir platform tools
                             </p>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
+                            <img src="./assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
                             <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services
                                 supporting thousands of users, including REST APIs, e-learning applications and more.
@@ -211,12 +211,12 @@
             <div class="container">
                 <div class="text-center">
                     <h3>Recent Releases</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Monitor Político</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
@@ -227,7 +227,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Mercado Libre global seller admin</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Electric vehicle charger</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
@@ -249,7 +249,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Scheduler</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
@@ -260,7 +260,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Soon...</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
@@ -271,7 +271,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="./assets/img/portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Soon...</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
@@ -307,7 +307,7 @@
             <div class="container">
 
                 <h3>Contact</h3>
-                <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 <form>
                     <div class="row">
                         <div class="col-sm-6">
@@ -360,7 +360,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-1.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -383,7 +383,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-2.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -406,7 +406,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -429,7 +429,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-4.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -452,7 +452,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-5.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -475,7 +475,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+                    <img class="img-res" src="./assets/img/portfolio-6.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
@@ -494,13 +494,13 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/skrollr.min.js"></script>
+    <script src="./assets/js/skrollr.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-progressbar/0.9.0/bootstrap-progressbar.min.js"></script>
-    <script src="assets/js/jquery.countTo.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/jquery.countTo.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </body>
 
