sending to repos

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                     <h1>Rodrigo Javier</h1>
                     <div class="page-scroll">
                         <p class="job-title">Android Developer</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <a href="#contact" class="btn btn-fill ">Download my Resume</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
 
                 <div class="col-md-6 text-right">
-                    <img src="./assets/img/dev1.png" alt="main image">
+                    <img style="width: 400px; height: 400px;" src="./assets/img/dev1.png" alt="main image">
                 </div>
 
             </div>
@@ -119,6 +119,7 @@
                     <h3>My Main Skills</h3>
                     <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
+<!--             
                 <div class="row">
 
                     <div class="col-md-6">
@@ -175,6 +176,7 @@
                     </div>
 
                 </div>
+             -->
             </div>
         </section>
 
@@ -210,7 +212,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>Recent Releases</h3>
+                    <h3>Portfolio</h3>
                     <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
