--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
+    <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/icon9.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icons/icon9.png">
 
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet">
 
     <link href="./assets/css/style.css" rel="stylesheet">
     <link href="./assets/css/responsive.css" rel="stylesheet">
+    <link href="./assets/css/footer.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -347,19 +348,22 @@
                 <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 <div class="row">
 
-                    <div class="col-sm-12 col-xs-6">
-                        <a class="icon facebook-bg" href="https://github.com/jardindunoix" target="_blank"><i
+                    <div class="col-sm-12 col-xs-12">
+
+
+
+                        <!-- <a class="icon facebook-bg" href="https://github.com/jardindunoix" target="_blank"><i
                                 class="icon-facebook"></i></a>
                         <a class="icon gplus-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd" target="_blank"><i
                                 class="icon-linkedin"></i></a>
                         <a class="icon twitter-bg" href="https://youtube.com/@CodeChunksEs" target="_blank"><i
-                                class="icon-twitter"></i></a>
+                                class="icon-twitter"></i></a> -->
 
                     </div>
 
 
 
-                    <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
+                    <!-- <img src="./assets/img/lines.svg" class="img-lines" alt="lines"> -->
 
                 </div>
 
@@ -384,12 +388,45 @@
 
     </main>
 
-    <footer id="colophon" class="site-footer">
+    <footer id="colophon" class="footer site-footer">
 
         <div class="container">
             <div class="row">
 
                 <div class="col-sm-4 col-xs-12">
+
+
+                    <ul>
+
+                        <li>
+                            <a href="https://youtube.com/@CodeChunksEs" target="_blank"
+                                class="footer-icon brands fa-youtube">
+                                <span class="label">YouTube</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"
+                                class="footer-icon brands fa-linkedin">
+                                <span class="label">LinkedIn</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://github.com/rodrigojavier101" target="_blank"
+                                class="footer-icon brands fa-github">
+                                <span class="label">GitHub</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://bitbucket.org/RodrigoJavier101/workspace/repositories/" target="_blank"
+                                class="footer-icon brands fa-bitbucket">
+                                <span class="label">Bitbucket</span>
+                            </a>
+                        </li>
+
+                    </ul>
 
                 </div>
 
