--- a/index.html
+++ b/index.html
@@ -396,41 +396,27 @@
                 <div class="col-sm-4 col-xs-12">
 
 
-                    <ul>
+                    <a href="https://youtube.com/@CodeChunksEs" target="_blank" class="fa-youtube">
+                        <span class="label">YouTube</span>
+                    </a>
 
-                        <li>
-                            <a href="https://youtube.com/@CodeChunksEs" target="_blank"
-                                class="footer-icon brands fa-youtube">
-                                <span class="label">YouTube</span>
-                            </a>
-                        </li>
+                    <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"
+                        class="fa-linkedin">
+                        <span class="label">LinkedIn</span>
+                    </a>
 
-                        <li>
-                            <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"
-                                class="footer-icon brands fa-linkedin">
-                                <span class="label">LinkedIn</span>
-                            </a>
-                        </li>
+                    <a href="https://github.com/rodrigojavier101" target="_blank" class="fa-github">
+                        <span class="label">GitHub</span>
+                    </a>
 
-                        <li>
-                            <a href="https://github.com/rodrigojavier101" target="_blank"
-                                class="footer-icon brands fa-github">
-                                <span class="label">GitHub</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="https://bitbucket.org/RodrigoJavier101/workspace/repositories/" target="_blank"
-                                class="footer-icon brands fa-bitbucket">
-                                <span class="label">Bitbucket</span>
-                            </a>
-                        </li>
-
-                    </ul>
+                    <a href="https://bitbucket.org/RodrigoJavier101/workspace/repositories/" target="_blank"
+                        class="fa-bitbucket">
+                        <span class="label">Bitbucket</span>
+                    </a>
 
                 </div>
 
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                <div class="col-sm-4 col-sm-offset-0">
                     <p class="copyright">Chile, 2024</p>
                 </div>
 
