--- a/index.html
+++ b/index.html
@@ -388,7 +388,29 @@
 
     </main>
 
-    <footer id="colophon" class="footer site-footer">
+    <footer id="colophon" class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <a class="icon fa-youtube" href="https://youtube.com/@CodeChunksEs" target="_blank"></a>
+                    <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
+                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
+                    <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
+                </div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                    <p class="copyright">Chile, 2024</p>
+                </div>
+                <div class="col-sm-4 col-xs-3">
+                    <div class="text-right page-scroll">
+                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- <footer id="colophon" class="footer site-footer">
 
         <div class="container">
             <div class="row">
@@ -428,7 +450,7 @@
             </div>
         </div>
 
-    </footer>
+    </footer> -->
 
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
