--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
                     <a class="fa-youtube" href="https://youtube.com/@CodeChunksEs" target="_blank"></a>
 
-                    <a class="icon linkedin-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"><i
+                    <a class="icon linkedin-bg" href="https://github.com/jardindunoix/" target="_blank"><i
                             class="icon-linkedin"></i></a>
                             
                     <a class="icon linkedin-bg" href="https://github.com/rodrigojavier101/" target="_blank"><i
