--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
+                        <!-- <div class="portfolio-item">
                             <img src="./assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Soon...</h4>
@@ -300,17 +300,17 @@
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
+                        <!-- <div class="portfolio-item">
                             <img src="./assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Soon...</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
